--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
         deploy:
             replicas: 1
             restart_policy:
-                condition: any
+                condition: on-failure
     moodleapp:
         image: jhardison/moodle:latest
         links:
@@ -34,7 +34,7 @@ services:
         deploy:
             replicas: 1
             restart_policy:
-                condition: any            
+                condition: on-failure            
 
 volumes: 
     db-volume:
